<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BloodBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dismiss">dismiss</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="phone">Phone Number:</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password:</string>
    <string name="create_new_user">Create New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">User Name:</string>
    <string name="email">Email:</string>
    <string name="birthday_date">Birthday</string>
    <string name="last_dat_todonate">Last Donation Date</string>
    <string name="phon_numper">Phone Number:</string>
    <string name="enter_password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="blood_type">Choose blood type:</string>
    <string name="governorate">Governrate</string>
    <string name="create_new_account">Create New Account</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="text_forgetpassword">Forget Password</string>
    <string name="btn_sendmssg">Send</string>
    <string name="text_chang_Pasword">Change Password</string>
    <string name="validit_code">Validation Code</string>
    <string name="new_password">New Password:</string>
    <string name="btt_chang_password">Change Password</string>
    <string name="errorPassword_Input">Unvalidation Password</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="my_profile">My Profile</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="about">about</string>
    <string name="instructions">Instructions</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact With developer</string>
    <string name="navigation_drawer_open" tools:ignore="MissingTranslation">nav</string>
    <string name="navigation_drawer_close" translatable="false">Nav Close</string>
    <string name="rate_app">Rate App</string>
    <string name="log_out">Log out</string>
    <string name="title_articale">Articale Title</string>
    <string name="search">Search</string>
    <string name="city">City:</string>
    <string name="name_of_the_case">Name of case:</string>
    <string name="hospital">Hospital:</string>
    <string name="choosegovernorate">Choose Governrate</string>
    <string name="choosecity">Choose city</string>
    <string name="details">Details:</string>
    <string name="call">Call</string>
    <string name="text_example">TextView</string>
    <string name="articles">Articles</string>
    <string name="donation_req">Donation Requests</string>
    <string name="all_governorate">All City</string>
    <string name="allblood_type">All Bloods</string>
    <string name="age">Age:</string>
    <string name="number_of_bags_required">Number of blood bags:</string>
    <string name="hospital_address">Hospital address:</string>
    <string name="show_map">Show Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogTitle">GPS Alert Dialog Title</string>
    <string name="GPSAlertDialogMessage">GPS Alert Dialog Message</string>
    <string name="action_settings">Action setting</string>
    <string name="my_location">Donation location</string>
    <string name="directions">Directions</string>
    <string name="choice">Choose</string>
    <string name="loading">Loading</string>
    <string name="suceess">Succees</string>
    <string name="failed">Failed</string>
    <string name="res_failed">Response failed:</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="invalid_pass">Invalid Password</string>
    <string name="pass_notidentical">Password not Identical</string>
    <string name="modify_the_data">modify the profileData</string>
    <string name="details_about">This program is owned by al-Hikma Hospital blood bank for all its branches and is not owned by any official or governmental institution, please help patients find blood as quickly as possible.</string>
    <string name="message">Massage:</string>
    <string name="title">Title:</string>
    <string name="notify">Notify</string>
    <string name="setting_notify">Setting Notification</string>
    <string name="save">save</string>
    <string name="add">add</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="all_categories">All Categories</string>
    <string name="name_1">Name:</string>
    <string name="phone_1">Phone number:</string>
    <string name="details_1">Details:</string>
    <string name="dont_req">Donation Request:</string>
    <string name="update">Update</string>
    <string name="mail">Email:</string>
    <string name="wait">Wait</string>
    <string name="enterPatientName">Invalid patient name</string>
    <string name="enterPatientAge">Invalid patient age</string>
    <string name="select_blood">Select blood type</string>
    <string name="enterNumBags">Invalid num of bags</string>
    <string name="enterHospitalName">Invalid Hospital Name</string>
    <string name="select_govern">Select Governrate</string>
    <string name="select_city">select City</string>
    <string name="enterHospitalAddress">Invalid hospital address</string>
    <string name="enterPhone">Invalid Phone</string>
    <string name="phoneLength">Phone Length equal 11</string>
    <string name="enterNotes">Invalid Notes</string>
    <string name="hospitalName">Hospital Name:</string>
    <string name="hospitaladdress">Hospital address:</string>
    <string name="numbers">Number of bags:</string>
    <string name="chooseloc">Choose Location</string>
    <string name="age_1">Age:</string>
    <string name="logout">Are you sure to log out now ?</string>
    <string name="yes">yes</string>
    <string name="cancell">cancel</string>
    <string name="notification">Notifications</string>
    <string name="no_notificaation">No notification</string>
    <string name="logging_in">Log in</string>
    <string name="creating_account">Creating account</string>
    <string name="code_was_sent">The Code will sent to you in Email</string>
    <string name="no_results">No Results</string>
    <string name="no_items">No items</string>
    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="sucess_add">Donation Request was adding successful</string>
    <string name="send_Req">Send Request Donation</string>
    <string name="password_changed">Password will Change</string>
    <string name="details_show">Details</string>
    <string name="blood_types">Blood type</string>
    <string name="hospital_name">Hospital name:</string>
    <string name="patient_name">Patient Name</string>
    <string name="create_donationrequest">Create donation request</string>

</resources>
