<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home_menu_home"
            android:title="@string/home"
            android:icon="@drawable/hom_36"/>
        <item
            android:id="@+id/home_menu_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/fav_36"/>

        <item
            android:id="@+id/home_menu_profile"
            android:title="@string/my_profile"
            android:icon="@drawable/acc_36"/>

        <item
            android:id="@+id/home_menu_notify_setting"
            android:title="@string/notification_setting"
            android:icon="@drawable/notify_36"/>

        <item
            android:id="@+id/home_menu_instructions"
            android:title="@string/instructions"
            android:icon="@drawable/instr_36" />

        <item
            android:id="@+id/home_menu_about_app"
            android:title="@string/about_app"
            android:icon="@drawable/about_36" />

        <item
            android:id="@+id/home_menu_contact_us"
            android:title="@string/contact_us"
            android:icon="@drawable/contact_36"/>
        <item
            android:id="@+id/home_menu_rate_app"
            android:title="@string/rate_app"
            android:icon="@drawable/rate_36"/>
        <item
            android:id="@+id/home_menu_logout"
            android:title="@string/log_out"
            android:icon="@drawable/logout_36"/>
    </group>

</menu>
