<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gra"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dim_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/update_data_user_fragment_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/update_data_user_fragment_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:textColorHint="@color/black"/>

                <TextView
                    android:id="@+id/update_data_user_fragment_txt_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/birthday_date"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:drawableEnd="@drawable/calendar_24"
                    android:textColorHint="@color/black"/>


                <Spinner
                    android:id="@+id/update_data_user_fragment_spin_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/bgspinrt"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/update_data_user_fragment_txt_last_don_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/last_dat_todonate"
                    android:inputType="datetime"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:drawableEnd="@drawable/calendar_24"
                    android:textColorHint="@color/black" />


                <Spinner
                    android:id="@+id/update_data_user_fragment_spin_gov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/bgspinrt"
                    android:gravity="center"
                    android:spinnerMode="dropdown"/>

                <Spinner
                    android:id="@+id/update_data_user_fragment_spin_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/bgspinrt"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/update_data_user_fragment_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/phone"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/update_data_user_fragment_et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:textColorHint="@color/black"  />

                <EditText
                    android:id="@+id/update_data_user_fragment_et_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_40"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit"
                    android:hint="@string/confirm_password"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_14"
                    android:gravity="start|center"
                    android:padding="@dimen/dim_5"
                    android:textColorHint="@color/black"  />

                <Button
                    android:id="@+id/update_data_user_fragment_btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim_8"
                    android:background="@drawable/shape_edit_blue"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_14" />



        </LinearLayout>
    </ScrollView>


</LinearLayout>