<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck_320_480"
    android:orientation="vertical"
    tools:context=".view.fragment.loginCycle.ForgetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/change_password_fragment_img_logo_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_180"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_10"
            android:src="@drawable/logo256" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_10"
            android:gravity="center"
            android:text="@string/text_forgetpassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/forget_password_fragment_et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_50"
            android:layout_marginStart="@dimen/dim_10"
            android:layout_marginTop="@dimen/dim_10"
            android:layout_marginEnd="@dimen/dim_10"
            android:background="@drawable/shape_edit"
            android:hint="@string/phon_numper"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="@dimen/dim_10"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/forget_password_fragment_btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_fragment_et_password_setting"
            android:layout_marginStart="@dimen/dim_10"
            android:layout_marginTop="@dimen/dim_15"
            android:layout_marginEnd="@dimen/dim_10"
            android:layout_marginBottom="@dimen/dim_5"
            android:background="@drawable/shape_edit_green"
            android:gravity="center"
            android:text="@string/btn_sendmssg"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
